deploy: f623142ad3a28fa23e652ad4dffba5069363a858

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
 <p>The basic setup is quite simple. But, you have many options in each component to configure it even further.</p>
 <p>If you want to include it in your own project, download the package from <a href="https://github.com/tomazsaraiva/unity-gaze-interaction/releases">GitHub</a>.</p>
 <p>All feedback and contributions are more than welcome.</p>
+<h2 id="links">Links</h2>
+<ul>
+<li><a href="https://www.tomazsaraiva.com/unity-gaze-interaction/">Online Documentation and API</a>;</li>
+<li><a href="https://github.com/tomazsaraiva/unity-gaze-interaction/">GitHub repository</a>;</li>
+<li><a href="https://www.youtube.com/watch?v=8p4erfeWatA&amp;list=PLBBRLwJVhEhNeLRaBjJh7O8cvGHFKOpGW&amp;index=1">Explanation Video</a>.</li>
+</ul>
 </article>
           </div>
           
