--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,7 @@
                     <a href="index.html" name="" title="Docs">Docs</a>
                 </li>
                 <li>
-                    <a href="api/TS.GazeInteraction.html" name="api/toc.html" title="API">API</a>
+                    <a href="api/TS.GazeInteraction.html" name="" title="API">API</a>
                 </li>
           </ul>
       </div>
