deploy: 5f70f53b546b01cdc41c63fdab6b16b3d2890580

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <h2 id="core-components">Core Components</h2>
 <p>The system is built on two main components:</p>
 <ul>
-<li><a href="https://tomazsaraiva.github.io/unity-gaze-interaction/api/TS.GazeInteraction.GazeInteractor.html">GazeInteractor</a>: Component attached to the Main Camera that sends out rays to detect GazeInteractables.</li>
-<li><a href="https://tomazsaraiva.github.io/unity-gaze-interaction/api/TS.GazeInteraction.GazeInteractable.html">GazeInteractable</a>: Component attached to objects in the scene for the user to interact with. When the Gaze Interactor detects a Gaze Interactable, it triggers interaction events.</li>
+<li><a href="api/TS.GazeInteraction.GazeInteractor.html">GazeInteractor</a>: Component attached to the Main Camera that sends out rays to detect GazeInteractables.</li>
+<li><a href="api/TS.GazeInteraction.GazeInteractable.html">GazeInteractable</a>: Component attached to objects in the scene for the user to interact with. When the Gaze Interactor detects a Gaze Interactable, it triggers interaction events.</li>
 </ul>
 <h2 id="setting-up-the-system">Setting Up the System</h2>
 <h3 id="where-to-download">Where to download</h3>
@@ -96,7 +96,7 @@
 <li>Attach the GazeInteractable script to any object in your scene that you want the user to be able to interact with by looking at it.</li>
 <li>In the inspector window, you can define what happens when the user looks at the object for a certain amount of time (dwell time) or clicks on it (optional).</li>
 </ol>
-<p><img src="images/unity_gaze_interactable.png" alt="f838ee23d40c5c4a78188618c0d7ee66.png"></p>
+<p><img src="images/unity_gaze_interactable.png" alt="unity_gaze_interactable.png"></p>
 <p>This basic setup allows users to interact with objects simply by looking at them.</p>
 <h2 id="customization">Customization</h2>
 <p>Both the GazeInteractor and GazeInteractable scripts have many options you can use to customize their behavior.</p>
