deploy: 8f6db447aae08b4a32785036b74fd63379faf8d8

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <li>Attach the GazeInteractable script to any object in your scene that you want the user to be able to interact with by looking at it.</li>
 <li>In the inspector window, you can define what happens when the user looks at the object for a certain amount of time (dwell time) or clicks on it (optional).</li>
 </ol>
-<p><img src="images/unity_gaze_interactable.png" alt="unity_gaze_interactable.png"></p>
+<p><img src="images/unity_gaze_interactable.png" alt="unity_gaze_interactables.png"></p>
 <p>This basic setup allows users to interact with objects simply by looking at them.</p>
 <h2 id="customization">Customization</h2>
 <p>Both the GazeInteractor and GazeInteractable scripts have many options you can use to customize their behavior.</p>
