--- a/toc.html
+++ b/toc.html
@@ -13,10 +13,10 @@
 
           <ul class="nav level1">
                 <li>
-                    <a href="index.html" name="" title="Docs">Docs</a>
+                    <a href="docs/introduction.html" name="docs/toc.html" title="Docs">Docs</a>
                 </li>
                 <li>
-                    <a href="api/TS.GazeInteraction.html" name="" title="API">API</a>
+                    <a href="api/TS.GazeInteraction.html" name="api/toc.html" title="API">API</a>
                 </li>
           </ul>
       </div>
