deploy: 32df578241b6df3c45167dda336d584d41b7353a

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 <h2 id="core-components">Core Components</h2>
 <p>The system is built on two main components:</p>
 <ul>
-<li><a href="./api/TS.GazeInteraction.GazeInteractor.html">GazeInteractor</a>: Component attached to the Main Camera that sends out rays to detect <a href="api/TS.GazeInteraction.GazeInteractable.html">GazeInteractables</a>.</li>
-<li><a href="./api/TS.GazeInteraction.GazeInteractable.html">GazeInteractable</a>: Component attached to objects in the scene for the user to interact with. When the Gaze Interactor detects a Gaze Interactable, it triggers interaction events.</li>
+<li><a href="api/TS.GazeInteraction.GazeInteractor.html">GazeInteractor</a>: Component attached to the Main Camera that sends out rays to detect <a href="api/TS.GazeInteraction.GazeInteractable.html">GazeInteractables</a>.</li>
+<li><a href="api/TS.GazeInteraction.GazeInteractable.html">GazeInteractable</a>: Component attached to objects in the scene for the user to interact with. When the Gaze Interactor detects a Gaze Interactable, it triggers interaction events.</li>
 </ul>
 <h2 id="setting-up-the-system">Setting Up the System</h2>
 <h3 id="where-to-download">Where to download</h3>
