--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </button>
 
               <a class="navbar-brand" href="index.html">
-                <img id="logo" class="svg" src="logo.svg" alt="Gaze Interaction System">
+                <img id="logo" class="svg" src="images/logo.svg" alt="Gaze Interaction System">
               </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar">
