--- a/toc.html
+++ b/toc.html
@@ -13,7 +13,7 @@
 
           <ul class="nav level1">
                 <li>
-                    <a href="docs/introduction.html" name="docs/toc.html" title="Docs">Docs</a>
+                    <a href="docs/getting-started.html" name="docs/toc.html" title="Docs">Docs</a>
                 </li>
                 <li>
                     <a href="api/TS.GazeInteraction.html" name="api/toc.html" title="API">API</a>
