--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@
 <li>Explore the <a href="https://tomazsaraiva.github.io/unity-gaze-interaction/api/TS.GazeInteraction.html">API Reference</a> for more details.</li>
 <li>Modify the source code available on <a href="https://github.com/tomazsaraiva/unity-gaze-interaction">GitHub</a>.</li>
 <li>Install directly from the <a href="https://assetstore.unity.com/packages/tools/camera/vr-gaze-interaction-system-241337">Unity Asset Store</a>.</li>
-</ul>
-<h2 id="get-in-touch">Get in touch</h2>
-<ul>
-<li><a href="https://tomazsaraiva.com">tomazsaraiva.com</a></li>
-<li><a href="https://www.youtube.com/c/tomazsaraiva">tomazsaraiva</a></li>
+<li>Get in touch with me at <a href="https://tomazsaraiva.com">tomazsaraiva.com</a>.</li>
 </ul>
 </article>
           </div>
